--- a/index.html
+++ b/index.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="index.css">
+        <title>JS Drum kit</title>
     </head>
     <body>
+        <div class="key">
+            <div  data-key="65" class="key">
+                <kbd>A</kbd>
+                <span class="sound">Clap</span>
+            </div>
 
+            <div  data-key="83" class="key">
+                <kbd>S</kbd>
+                <span class="sound">hihat</span>
+            </div>
+
+            <div  data-key="68" class="key">
+                <kbd>D</kbd>
+                <span class="sound">kick</span>
+            </div>
+
+            <div  data-key="70" class="key">
+                <kbd>F</kbd>
+                <span class="sound">openhat</span>
+            </div>
+
+            <div  data-key="71" class="key">
+                <kbd>G</kbd>
+                <span class="sound">Boom</span>
+            </div>
+
+            <div  data-key="72" class="key">
+                <kbd>H</kbd>
+                <span class="sound">Clap</span>
+            </div>
+
+            <div  data-key="73" class="key">
+                <kbd>J</kbd>
+                <span class="sound">C</span>
+            </div>
+
+
+            <div  data-key="75" class="key">
+                <kbd>K</kbd>
+                <span class="sound">Tom</span>
+            </div>
+
+
+            <div  data-key="76" class="key">
+                <kbd>L</kbd>
+                <span class="sound">Tink</span>
+            </div>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
