--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
             <div  data-key="72" class="key">
                 <kbd>H</kbd>
-                <span class="sound">Clap</span>
+                <span class="sound">ride</span>
             </div>
 
-            <div  data-key="73" class="key">
+            <div  data-key="74" class="key">
                 <kbd>J</kbd>
-                <span class="sound">C</span>
+                <span class="sound">Snare</span>
             </div>
 
 
@@ -54,6 +54,19 @@
                 <span class="sound">Tink</span>
             </div>
         </div>
+
+
+
+        <audio data-key="65" scr="sounds/clap.wav"></audio>
+        <audio data-key="83" scr="sounds/hihat.wav"></audio>
+        <audio data-key="68" scr="sounds/kick.wav"></audio>
+        <audio data-key="70" scr="sounds/openhat.wav"></audio>
+        <audio data-key="71" scr="sounds/boom.wav"></audio>
+        <audio data-key="72" scr="sounds/ride.wav"></audio>
+        <audio data-key="74" scr="sounds/snare.wav"></audio>
+        <audio data-key="75" scr="sounds/tom.wav"></audio>
+        <audio data-key="76" scr="sounds/tink.wav"></audio>
+        
         <script src="index.js"></script>
     </body>
 </html>
