new sounds folder

--- a/index.html
+++ b/index.html
@@ -7,49 +7,49 @@
     </head>
     <body>
         <div class="key">
-            <div  data-key="65" class="key">
+            <div  data-key="a" class="key">
                 <kbd>A</kbd>
                 <span class="sound">Clap</span>
             </div>
 
-            <div  data-key="83" class="key">
+            <div  data-key="s" class="key">
                 <kbd>S</kbd>
                 <span class="sound">hihat</span>
             </div>
 
-            <div  data-key="68" class="key">
+            <div  data-key="d" class="key">
                 <kbd>D</kbd>
                 <span class="sound">kick</span>
             </div>
 
-            <div  data-key="70" class="key">
+            <div  data-key="f" class="key">
                 <kbd>F</kbd>
                 <span class="sound">openhat</span>
             </div>
 
-            <div  data-key="71" class="key">
+            <div  data-key="g" class="key">
                 <kbd>G</kbd>
                 <span class="sound">Boom</span>
             </div>
 
-            <div  data-key="72" class="key">
+            <div  data-key="h" class="key">
                 <kbd>H</kbd>
                 <span class="sound">ride</span>
             </div>
 
-            <div  data-key="74" class="key">
+            <div  data-key="j" class="key">
                 <kbd>J</kbd>
                 <span class="sound">Snare</span>
             </div>
 
 
-            <div  data-key="75" class="key">
+            <div  data-key="k" class="key">
                 <kbd>K</kbd>
                 <span class="sound">Tom</span>
             </div>
 
 
-            <div  data-key="76" class="key">
+            <div  data-key="l" class="key">
                 <kbd>L</kbd>
                 <span class="sound">Tink</span>
             </div>
@@ -57,15 +57,15 @@
 
 
 
-        <audio data-key="65" scr="sounds/clap.wav"></audio>
-        <audio data-key="83" scr="sounds/hihat.wav"></audio>
-        <audio data-key="68" scr="sounds/kick.wav"></audio>
-        <audio data-key="70" scr="sounds/openhat.wav"></audio>
-        <audio data-key="71" scr="sounds/boom.wav"></audio>
-        <audio data-key="72" scr="sounds/ride.wav"></audio>
-        <audio data-key="74" scr="sounds/snare.wav"></audio>
-        <audio data-key="75" scr="sounds/tom.wav"></audio>
-        <audio data-key="76" scr="sounds/tink.wav"></audio>
+        <audio data-key="a" scr="./sounds/clap.wav"></audio>
+        <audio data-key="s" scr="sounds/hihat.wav"></audio>
+        <audio data-key="d" scr="sounds/kick.wav"></audio>
+        <audio data-key="f" scr="sounds/openhat.wav"></audio>
+        <audio data-key="g" scr="./sounds/boom.wav"></audio>
+        <audio data-key="h" scr="sounds/ride.wav"></audio>
+        <audio data-key="j" scr="sounds/snare.wav"></audio>
+        <audio data-key="k" scr="sounds/tom.wav"></audio>
+        <audio data-key="l" scr="sounds/tink.wav"></audio>
         
         <script src="index.js"></script>
     </body>
