music notes are not working

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
         </div>
 
 
-
-        <audio data-key="a" scr="./sounds/clap.wav"></audio>
-        <audio data-key="s" scr="sounds/hihat.wav"></audio>
-        <audio data-key="d" scr="sounds/kick.wav"></audio>
-        <audio data-key="f" scr="sounds/openhat.wav"></audio>
-        <audio data-key="g" scr="./sounds/boom.wav"></audio>
-        <audio data-key="h" scr="sounds/ride.wav"></audio>
-        <audio data-key="j" scr="sounds/snare.wav"></audio>
-        <audio data-key="k" scr="sounds/tom.wav"></audio>
-        <audio data-key="l" scr="sounds/tink.wav"></audio>
+<!-- 
+        <audio data-key="a" src="../sounds/clap.wav"></audio>
+        <audio data-key="s" src="./sounds/hihat.wav"></audio>
+        <audio data-key="d" src="./sounds/kick.wav"></audio>
+        <audio data-key="f" src="./sounds/openhat.wav"></audio>
+        <audio data-key="g" src="./sounds/boom.wav"></audio>
+        <audio data-key="h" src="./sounds/ride.wav"></audio>
+        <audio data-key="j" src="./sounds/snare.wav"></audio>
+        <audio data-key="k" src="./sounds/tom.wav"></audio>
+        <audio data-key="l" src="./sounds/tink.wav"></audio> -->
         
         <script src="index.js"></script>
     </body>
